fix: s20 ultra overflow

--- a/src/app/sponsors/sponsors.module.css
+++ b/src/app/sponsors/sponsors.module.css
@@ -122,7 +122,7 @@
   align-items: center;
 
   @media screen and (max-width:560px) {
-    transform: translate(10%, -45%);
+    transform: translate(10%, -55%);
     margin-top: 60px;
   }
 }
@@ -139,10 +139,7 @@
   gap: 115px;
   justify-content: center;
 
-  @media screen and (max-width:560px) {
-    flex-wrap: nowrap;
-    flex-direction: column;
-    align-items: center;
+  @media screen and  (max-width:560px) {
     gap: 5px;
   }
 }
@@ -163,8 +160,12 @@
   align-items: center;
   overflow-y: scroll;
 
+  @media screen and (max-width:560px) {
+    padding: 0px;
+  }
 
 }
+
 .parentList::-webkit-scrollbar {
   display: none;
 }
